--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/slider": "^4.5.0",
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "expo": "^49.0.21",
     "expo-cli": "^6.3.10",
     "expo-status-bar": "~1.6.0",
@@ -17,6 +18,7 @@
     "react-native": "0.72.6",
     "react-native-reanimated": "~3.3.0",
     "react-native-vertical-slider": "^1.0.1",
+    "react-native-wheel-color-picker": "^1.2.0",
     "rn-vertical-slider": "^4.0.0"
   },
   "devDependencies": {
