--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "expo-cli": "^6.3.10",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-vertical-slider": "^1.0.1",
-    "rn-vertical-slider": "^4.0.0"
+    "react-native": "0.72.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
